frontend/test/should_fail/index_pattern_missing_where_index_expected.grg
#using "index_multiple_model.gm"

rule i(ref s:set<int>) {
	n:N{ascending(s >= 0, s <= 1)};
	
	modify {
	}
}
